# internal/apiserver/docs/swagger.yaml
@@ -1003,6 +1003,21 @@ definitions:
         description: Reference 返回参考文档，可能有助于解决此错误
         type: string
     type: object
+  internal_apiserver_transport_rest_suggest.ProfileSuggestResponse:
+    properties:
+      code:
+        type: integer
+      data:
+        items:
+          $ref: '#/definitions/internal_apiserver_transport_rest_suggest.ProfileSuggestResponseItem'
+        type: array
+      message:
+        type: string
+    required:
+    - code
+    - data
+    - message
+    type: object
   internal_apiserver_transport_rest_suggest.ProfileSuggestResponseItem:
     properties:
       id:
@@ -2287,9 +2302,7 @@ paths:
         "200":
           description: 联想结果（按权重降序，去重）
           schema:
-            items:
-              $ref: '#/definitions/internal_apiserver_transport_rest_suggest.ProfileSuggestResponseItem'
-            type: array
+            $ref: '#/definitions/internal_apiserver_transport_rest_suggest.ProfileSuggestResponse'
         "400":
           description: 参数缺失
           schema:
